--- a/1-3-1.html
+++ b/1-3-1.html
@@ -26,8 +26,8 @@
 	<meta itemprop="image" content="./public/uploads/soc_index.jpg">
 
 	
-	<link rel="manifest" href="./manifest.json?v=1470121829007">
-	<link rel="mask-icon" href="./public/images/safari-pinned-tab.svg?v=1470121829007" color="#A2B2F2">
+	<link rel="manifest" href="./manifest.json?v=1469803628265">
+	<link rel="mask-icon" href="./public/images/safari-pinned-tab.svg?v=1469803628265" color="#A2B2F2">
 	<meta name="msapplication-TileColor" content="#A2B2F2">
 	
 	<meta name="theme-color" content="#A2B2F2">
@@ -48,7 +48,6 @@
 	
 	<script src="./public/js/bootstrap.min.js"></script>
 	<script src="./public/js/swiper.jquery.min.js"></script>
-    <script src='./public/js/ractive.js'></script>
 	<script src="./public/js/common.js"></script>
 
 </head>
@@ -64,8 +63,8 @@
 
 			<header class="header">
 	<a class="header__site" href="index.html">
-		<img class="header__logo" src="./public/images/logo.svg?v=1470121829007" alt="">
-		<img class="header__logo-mobile" src="./public/images/logo_2.svg?v=1470121829007" alt="">
+		<img class="header__logo" src="./public/images/logo.png?v=1469803628265" alt="">
+		<img class="header__logo-mobile" src="./public/images/logo.png?v=1469803628265" alt="">
 		<span class="header__name">Bootcamp</span>
 	</a>
 	<div class="header__sider">
@@ -73,7 +72,7 @@
 	</div>
 </header>
 
-<ul class="nav">
+			<ul class="nav">
 				<li class="marked">
 					<a href="index.html">
 						<span class="sidebar__ico"></span>
@@ -209,24 +208,44 @@
 		</div>
 
 		<br>
+		<br>
+		<h2 class="title-light">Congratulations!</h2>
+		
+		<p style="color: #3771e3;"><i><big>You’ve completed Module 1 of the Bootcamp</big></i></p>
 
+		<br>
 		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-10">
-
-                <div id="quizTest1"></div>
-
-				
+			<div class="col-md-7">
+				<div class="content__award">
+					<img class="content__badge" src="./public/images/badge-01.svg?v=1469803628265" alt="">
+				</div>
 			</div>
-			<div class="col-md-1"></div>
+			<div class="col-md-4">
+				<div class="content__box content__box_lined">
+					<h2 class="title-light" style="color: #3771e3;">Rate Module 1</h2>
+					<div class="row">
+						<div class="col-md-6 text-center">
+							<a class="like" href="#" role="button">
+								<img src="./public/images/like.svg?v=1469803628265" alt=""><br>
+								Like
+							</a>
+						</div>
+						<div class="col-md-6 text-center">
+							<a class="dislike" href="#" role="button">
+								<img src="./public/images/dislike.svg?v=1469803628265" alt=""><br>
+								Disike
+							</a>
+						</div>
+					</div>
+				</div>
+				<button class="btn btn-lg btn-primary btn-primary_light" type="button" data-toggle="modal" data-target="#commentModal">Leave us a comment !</button>
+			</div>
 		</div>
-
-		<br>
 		<br>
 
 		<div class="row">
-			<div class="col-md-12">
-				<a class="btn btn-success" href="1-3-2.html" role="button">Next screen <span class="btn__next">›</span></a>
+			<div class="col-md-5">
+				<a class="btn btn-lg btn-block btn-success" href="2-0.html" role="button">Continue to Module 2 <span class="btn__next">›</span></a>
 			</div>
 		</div>
 
@@ -281,6 +300,26 @@
 
 </div>
 
+
+<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel">
+	<div class="modal-dialog" role="document">
+		<form>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title" id="myModalLabel">
+						Sample question
+					</h2>
+				</div>
+				<div class="modal-body">
+					<textarea class="form-control" rows="5"></textarea>
+				</div>
+				<div class="modal-footer text-right">
+					<button type="submit" class="btn btn-lg btn-success">Send</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
 
 
 </body>
