--- a/1-3.html
+++ b/1-3.html
@@ -26,8 +26,8 @@
 	<meta itemprop="image" content="./public/uploads/soc_index.jpg">
 
 	
-	<link rel="manifest" href="./manifest.json?v=1470121829034">
-	<link rel="mask-icon" href="./public/images/safari-pinned-tab.svg?v=1470121829034" color="#A2B2F2">
+	<link rel="manifest" href="./manifest.json?v=1470121829007">
+	<link rel="mask-icon" href="./public/images/safari-pinned-tab.svg?v=1470121829007" color="#A2B2F2">
 	<meta name="msapplication-TileColor" content="#A2B2F2">
 	
 	<meta name="theme-color" content="#A2B2F2">
@@ -64,8 +64,8 @@
 
 			<header class="header">
 	<a class="header__site" href="index.html">
-		<img class="header__logo" src="./public/images/logo.svg?v=1470121829034" alt="">
-		<img class="header__logo-mobile" src="./public/images/logo_2.svg?v=1470121829034" alt="">
+		<img class="header__logo" src="./public/images/logo.svg?v=1470121829007" alt="">
+		<img class="header__logo-mobile" src="./public/images/logo_2.svg?v=1470121829007" alt="">
 		<span class="header__name">Bootcamp</span>
 	</a>
 	<div class="header__sider">
@@ -73,7 +73,7 @@
 	</div>
 </header>
 
-			<ul class="nav">
+<ul class="nav">
 				<li class="marked">
 					<a href="index.html">
 						<span class="sidebar__ico"></span>
@@ -199,7 +199,8 @@
 				</ol>
 			</div>
 		</div>
-		<h1>Introduction to Kubernetes cluster</h1>
+
+		<h1>Quiz | Introduction to Kubernetes cluster</h1>
 
 		<div class="row">
 			<div class="col-md-12 text-left">
@@ -208,17 +209,24 @@
 		</div>
 
 		<br>
+
 		<div class="row">
-			<div class="col-md-5">
-				<h2>Quiz</h2>
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
 				<p style="color: #3771e3;"><i><big>Take the Kubernetes Bootcamp Quiz to find out what you learnt in Module 1</big></i></p>
+                <div id="quizTest1"></div>
+
+				
 			</div>
+			<div class="col-md-1"></div>
 		</div>
+
+		<br>
 		<br>
 
 		<div class="row">
 			<div class="col-md-12">
-				<a class="btn btn-lg btn-success" href="1-3-1.html" role="button">Begin! <span class="btn__next">›</span></a>
+				<a class="btn btn-success" href="1-3-1.html" role="button">Next screen <span class="btn__next">›</span></a>
 			</div>
 		</div>
 
